fix(docs): gh stars button layout shift

--- a/apps/docs/src/styles/components/navbar.scss
+++ b/apps/docs/src/styles/components/navbar.scss
@@ -385,6 +385,7 @@
     border-color: var(--block-bg-color);
 
     a {
+      min-width: 100px;
       display: flex;
       gap: 8px;
       align-items: center;
